--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,7 +18,7 @@
     <mat-sidenav-content style="width: 100%;">
         <mat-toolbar color="primary" class="toolbar">
             <span class="example-spacer"></span>
-            <button mat-icon-button class="example-icon" aria-label="Logout">
+            <button mat-icon-button class="example-icon" aria-label="Logout" (click)="onLogout()">
                 <mat-icon>exit_to_app</mat-icon>
             </button>
         </mat-toolbar>
