--- a/src/app/components/banca/banca.component.html
+++ b/src/app/components/banca/banca.component.html
@@ -1,20 +1,21 @@
 <div class="container my-5">
-    <h1 class="text-center mb-4">Banche</h1>
-    <button mat-raised-button color="primary" routerLink="add">Add Banca</button>
-    
- <table class="table table-striped table-bordered table-responsive" *ngIf="banche">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Nome</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let banca of banche">
-                <td>{{ banca.id }}</td>
-                <td>{{ banca.nome }}</td>
-            </tr>
-        </tbody>
+    <h1 class="text-center mb-4">Funzionalità della Banca</h1>
+    <table class="table table-striped table-bordered table-responsive" *ngIf="funzionalita">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Nome</th>
+          <!-- Aggiungi altre colonne se necessario -->
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let funzione of funzionalita">
+          <td>{{ funzione.id }}</td>
+          <td>{{ funzione.nome }}</td>
+          <!-- Aggiungi altre colonne se necessario -->
+        </tr>
+      </tbody>
     </table>
-    <p *ngIf="!banche" class="text-center">No drinks found</p>
-</div>
+    <p *ngIf="!funzionalita" class="text-center">Nessuna funzionalità trovata</p>
+  </div>
+  
