--- a/src/app/components/select-banca/select-banca.component.html
+++ b/src/app/components/select-banca/select-banca.component.html
@@ -1,10 +1,10 @@
+<!-- select-banca.component.html -->
+
 <div class="select-container">
-    <label for="bancaSelect" class="label">Select Bank:</label>
-    <div class="custom-select">
-      <select id="bancaSelect" (change)="onBancaSelected($event)" class="select-dropdown">
-        <option *ngFor="let banca of banche" [value]="banca.id">{{ banca.nome }}</option>
-      </select>
-      <div class="select-arrow"></div>
-    </div>
-  </div>
-  
+  <mat-form-field>
+    <mat-label>Select Bank:</mat-label>
+    <mat-select [(value)]="selectedBanca" (selectionChange)="onBancaSelected()">
+      <mat-option *ngFor="let banca of banche" [value]="banca.id">{{ banca.nome }}</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
