--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,5 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @import url('assets/css/common.css');
+
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
