--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
                 <mat-icon>person</mat-icon>
                 <span class="nav-label">Utenti</span>
             </mat-list-item>
-            <mat-list-item role="listitem" routerLink="contatti" [routerLinkActive]="'active'">
+            <mat-list-item role="listitem" routerLink="edit" [routerLinkActive]="'active'">
                 <mat-icon>contact_support</mat-icon>
                 <span class="nav-label">Contatti</span>
             </mat-list-item>
