--- a/src/app/components/banca/banca.component.html
+++ b/src/app/components/banca/banca.component.html
@@ -1,21 +1,26 @@
-<div class="container my-5">
-    <h1 class="text-center mb-4">Funzionalità della Banca</h1>
-    <table class="table table-striped table-bordered table-responsive" *ngIf="funzionalita">
-      <thead>
+<div class="container my-5 user-form">
+  <h1 class="text-center mb-4">Funzionalità della Banca</h1>
+
+  <div class="table-responsive">
+    <table class="table table-striped table-bordered">
+      <thead class="thead-dark">
         <tr>
           <th>ID</th>
           <th>Nome</th>
-          <!-- Aggiungi altre colonne se necessario -->
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let funzione of funzionalita">
           <td>{{ funzione.id }}</td>
           <td>{{ funzione.nome }}</td>
-          <!-- Aggiungi altre colonne se necessario -->
         </tr>
       </tbody>
     </table>
-    <p *ngIf="!funzionalita" class="text-center">Nessuna funzionalità trovata</p>
   </div>
-  
+
+  <p *ngIf="!funzionalita" class="text-center mt-3">Nessuna funzionalità trovata</p>
+
+  <div class="text-center">
+    <button mat-raised-button color="primary" (click)="navigateToEditFunc()">Modifica</button>
+  </div>
+</div>
