--- a/src/app/components/select-banca/select-banca.component.html
+++ b/src/app/components/select-banca/select-banca.component.html
@@ -1,10 +1,15 @@
-<!-- select-banca.component.html -->
-
-<div class="select-container">
-  <mat-form-field>
-    <mat-label>Select Bank:</mat-label>
-    <mat-select [(value)]="selectedBanca" (selectionChange)="onBancaSelected()">
-      <mat-option *ngFor="let banca of banche" [value]="banca.id">{{ banca.nome }}</mat-option>
-    </mat-select>
-  </mat-form-field>
+<div class="outer">
+  <div class="select-container">
+    <mat-card class="card">
+      <mat-card-title class="text-center">Select Bank</mat-card-title>
+      <mat-card-content>
+        <mat-form-field class="full-width">
+          <mat-label>Select Bank:</mat-label>
+          <mat-select [(value)]="selectedBanca" (selectionChange)="onBancaSelected()">
+            <mat-option *ngFor="let banca of banche" [value]="banca.id">{{ banca.nome }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-card-content>
+    </mat-card>
+  </div>
 </div>
