--- a/src/app/components/prelievo/prelievo.component.css
+++ b/src/app/components/prelievo/prelievo.component.css
@@ -1,3 +1,12 @@
+
+.outer {
+  height: 100vh;
+  background: linear-gradient(135deg, #a3ccaf, #965b6f, #bdbdc2, #a5a80d);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .prelievo-container {
     max-width: 400px;
     margin: 0 auto;
