--- a/src/app/components/saldo/saldo.component.css
+++ b/src/app/components/saldo/saldo.component.css
@@ -1,4 +1,12 @@
 /* saldo.component.css */
+.outer {
+  height: 100vh;
+  background: linear-gradient(135deg, #a3ccaf, #965b6f, #bdbdc2, #a5a80d);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .saldo-container {
     max-width: 400px;
     margin: 0 auto;
