--- a/src/app/components/edit-func/edit-func.component.html
+++ b/src/app/components/edit-func/edit-func.component.html
@@ -4,24 +4,22 @@
     <table class="table table-striped table-bordered table-responsive">
       <thead>
         <tr>
-          <th>ID</th>
           <th>Nome</th>
           <th>Attiva</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let funzione of funzionalita">
-          <td>{{ funzione.id }}</td>
           <td>{{ funzione.nome }}</td>
           <td>
             <div class="form-check">
               <input class="form-check-input" type="checkbox" [(ngModel)]="funzione.attiva" name="attiva_{{ funzione.id }}" (change)="onCheckboxChange(funzione)">
-              <label class="form-check-label">Attiva</label>
+              <label class="form-check-label" for="attiva_{{ funzione.id }}">Attiva</label>
             </div>
           </td>
         </tr>
       </tbody>
     </table>
-    <button type="submit" class="primary">Salva Modifiche</button>
+    <button type="submit" class="btn btn-primary">Salva Modifiche</button>
   </form>
 </div>
