--- a/src/app/components/registro-operazioni/registro-operazioni.component.css
+++ b/src/app/components/registro-operazioni/registro-operazioni.component.css
@@ -1,55 +1,56 @@
-/* registro-operazioni.component.css */
+.outer {
+  height: 100vh;
+  background: linear-gradient(135deg, #a3ccaf, #965b6f, #bdbdc2, #a5a80d);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-/* Aggiungi stili al container */
 .container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
-  }
-  
-  /* Aggiungi stili all'header */
-  h2 {
-    text-align: center;
-    color: #007bff;
-    margin-bottom: 20px;
-  }
-  
-  /* Aggiungi stili alla tabella */
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    border-spacing: 0;
-    margin-top: 20px;
-  }
-  
-  /* Stili per l'header della tabella */
-  table th {
-    background-color: #007bff;
-    color: #fff;
-    text-align: center;
-    padding: 15px;
-  }
-  
-  /* Stili per le celle della tabella */
-  table td {
-    border: 1px solid #ddd;
-    padding: 15px;
-    text-align: center;
-  }
-  
-  /* Stili per le righe alternate */
-  table tbody tr:nth-child(even) {
-    background-color: #f8f9fa;
-  }
-  
-  /* Stili per il messaggio "No operation found" */
-  p {
-    text-align: center;
-    color: #ff0000;
-    font-weight: bold;
-    margin-top: 20px;
-  }
-  
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+}
+
+h2 {
+  text-align: center;
+  color: #007bff;
+  margin-bottom: 20px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin-top: 20px;
+  border-radius: 8px; /* Aggiunto bordo arrotondato */
+  overflow: hidden; /* Nasconde eventuali bordi sottili extra a causa della bordatura della tabella */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Aggiunta ombra */
+}
+
+table th {
+  background-color: #0056b3; /* Colore di sfondo più scuro per l'header della tabella */
+  color: #fff;
+  text-align: center;
+  padding: 15px;
+}
+
+table td {
+  border: 1px solid #ddd;
+  padding: 15px;
+  text-align: center;
+}
+
+table tbody tr:nth-child(even) {
+  background-color: #f8f9fa;
+}
+
+p {
+  text-align: center;
+  color: #ff0000;
+  font-weight: bold;
+  margin-top: 20px;
+}
