--- a/src/app/components/registro-operazioni/registro-operazioni.component.html
+++ b/src/app/components/registro-operazioni/registro-operazioni.component.html
@@ -1,10 +1,8 @@
-<div>
-    <h2>Operation Log</h2>
+<div class="outer">
     
     <table>
       <thead>
         <tr>
-          <th>ID</th>
           <th>Functionality</th>
           <th>Quantity</th>
           <th>Date</th>
@@ -12,7 +10,6 @@
       </thead>
       <tbody>
         <tr *ngFor="let operazione of operazioni; let even = even" [ngClass]="{'even-row': even, 'odd-row': !even}">
-          <td>{{ operazione.id }}</td>
           <td>{{ operazione.funzionalita }}</td>
           <td>{{ operazione.quantita }}</td>
           <td>{{ operazione.dataOperazione | date: 'short' }}</td>
