--- a/src/app/components/edit-utente/edit-utente.component.html
+++ b/src/app/components/edit-utente/edit-utente.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="mb-3">
           <label for="nomeUtente" class="form-label">Nome Utente</label>
-          <input type="text" class="form-control" id="nomeUtente" name="nomeUtente" [(ngModel)]="utenteDetails.nomeUtente">
+          <input type="text" class="form-control" id="nomeUtente" readonly name="nomeUtente" [(ngModel)]="utenteDetails.nomeUtente">
         </div>
         <div class="mb-3">
           <label for="password" class="form-label">Password</label>
