--- a/src/app/components/prelievo/prelievo.component.css
+++ b/src/app/components/prelievo/prelievo.component.css
@@ -1,7 +1,7 @@
 
 .outer {
   height: 100vh;
-  background: linear-gradient(135deg, #a3ccaf, #965b6f, #bdbdc2, #a5a80d);
+  background: linear-gradient(135deg, #daf7e2, #e6b4c4, #c2c2fc, #e1e2ae);
   display: flex;
   align-items: center;
   justify-content: center;
