--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -23,7 +23,7 @@
   /* .sidebar: Stile per la barra laterale */
   .sidebar {
     width: 240px; /* Larghezza fissa della barra laterale */
-    background-color: #333; /* Colore di sfondo scuro per la barra laterale */
+    background-color: #a8c1eb; /* Colore di sfondo scuro per la barra laterale */
     color: #fff; /* Testo bianco per maggiore contrasto */
   }
   
